[package]
name = "do_an_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
http = "1.3.1"
headers = "0.4.1"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
regex = "1.12.2"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
async-trait = "0.1.89"
axum-extra = { version = "0.10.3", features = ["typed-header"] }
serde_json = "1.0.145"
tokio = "1.48.0"
thiserror = "2.0.17"
reqwest = "0.12.24"
tracing = "0.1.41"
wither = "0.9.0"
sea-orm = "1.1.17"
rdkafka = "0.38.0"
eyre = "0.6.12"
